# under_attack_public_wifi

./: CLAUDE.md  CMakeLists.txt  CODEX.md  NEXT_STEPS.md  README.md  RUNBOOK.md  package-release.ps1  package_release.ps1  releases.json
.claude/: CLAUDE.md
resources/: demo_events.json  services.json
scripts/: cybershow_events.awk  device_watch.sh  oui.txt  send_traffic_events.sh  traffic_watch.sh  whatsapp_watch.sh
src/: MainWindow.cpp  MainWindow.h  main.cpp
src/cybershow/common/: CyberOperationalLog.cpp
